Modification du tutoriel

--- a/tuto.html
+++ b/tuto.html
@@ -3,7 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Tutoriel - Webinar - Enerbioflex</title>
-		<meta name="viewport" content="width=device-width, user-scalable=yes" />
+		<style type="text/css">
+			img {
+				max-width: 100%;
+			}
+		</style>
 	</head>
 
 	<body>
